(3.1.5)[Added Material You] Features Added: 1. Added Material You theming style. 2. Scrollbar style changed. 3. Some CSS fixes. 4. Lot of refactor. 5. Buttons' signature changed let -> const.

--- a/css/map.css
+++ b/css/map.css
@@ -29,7 +29,7 @@ body {
 	align-items: center;
 	flex-direction: column;
 	/* background: var(--material-white) !important; */
-	background-image: linear-gradient(to left, var(--material-white), #90a4ae) !important;
+	background-image: linear-gradient(to left, var(--material-white), #90a4ae);
 	font-family: "GoogleSans";
 }
 
@@ -38,7 +38,7 @@ body {
 }
 
 nav {
-	background-color: rgba(55, 71, 79, 0.6) !important;
+	background-color: rgba(55, 71, 79, 0.6);
 	width: 100%;
 	border-radius: 50px;
 	backdrop-filter: blur(5px);
@@ -49,7 +49,7 @@ nav {
 	margin-right: 11vw !important;
 }
 
-#nav-mobile > li:nth-child(8) > div > label {
+#nav-mobile > li:nth-child(9) > div > label {
 	color: white;
 }
 
@@ -59,7 +59,7 @@ a {
 
 a:hover {
 	border-radius: 10px !important;
-	transition: linear 0.2s;
+	transition: 0.2s ease-in-out;
 }
 
 button {
@@ -68,7 +68,7 @@ button {
 
 button:hover {
 	border-radius: 10px !important;
-	transition: linear 0.2s;
+	transition: 0.2s ease-in-out;
 }
 
 canvas {
@@ -78,6 +78,7 @@ canvas {
 
 canvas:active {
 	cursor: grab;
+	z-index: 3;
 }
 
 .divider {
@@ -146,13 +147,28 @@ canvas:active {
 .map-container {
 	border-radius: 30px;
 	width: 55vw; /* size of container */
-	height: 84vh; /* size of container */
+	height: 85vh; /* size of container */
 	overflow: scroll; /* Overflows the map */
 }
 
-/* ::-webkit-scrollbar {
+body::-webkit-scrollbar {
 	width: 0;
-} */
+	background: transparent;
+}
+
+.map-container::-webkit-scrollbar {
+	width: 10px;
+}
+
+.map-container::-webkit-scrollbar-corner {
+	width: 0;
+}
+
+.map-container::-webkit-scrollbar-thumb {
+	background-color: rgba(55, 71, 79, 0.6);
+	border-radius: 30px;
+	width: 10px;
+}
 
 body > div > div.col.s7 {
 	display: flex;
